--- a/showcases/2048.md
+++ b/showcases/2048.md
@@ -1,7 +1,7 @@
 ---
 layout: showcase
 title: "2048 Clone"
-permalink: /showcases/showcase1
+permalink: /showcases/2048
 date: 2020-07-17 12:20:32 +0200
 icon: /assets/images/portfolio/2048.png
 image: /assets/images/portfolio/2048.png
