--- a/showcases/2048.md
+++ b/showcases/2048.md
@@ -1,5 +1,6 @@
 ---
 title: "2048 Clone"
+targetLink: https://github.com/RezMike/2048
 date: 2020-07-17T12:20:32
 icon: /assets/images/portfolio/2048_thumb.png
 image: /assets/images/portfolio/2048.png
